# transend-mcp

./: .env-example  README.md  client.py  pyproject.toml  server.py
tests/: __init__.py  conftest.py  test_server.py
